Add demo for "shutdown on success" policy